--- a/docs/sensor.tex
+++ b/docs/sensor.tex
@@ -1,7 +1,8 @@
 \chapter{Model czujnika laserowego}
+\label{sec:monokl}
 Istnieje dedykowany obiekt w standardzie SDF dla tego typu czujników.
 Również Gazebo wspiera wizualnie symulację poprzez możliwość renderowania zasymulowanych impulsów lasera.
-Tak, jak model platformy, ten pakiet otrzymał nazwę kodową \texttt{Monokl}.
+Tak, jak model platformy, ten pakiet otrzymał nazwę kodową \texttt{monokl}, ponieważ pozwala obserwować otoczenie, jak okular.
 
 \section{Obliczenia symulatora}
 	Czujnik laserowy jest bardzo łatwo zasymulować w przestrzeni wirtualnej za pomocą rzutowania półprostych.
