--- a/ros/src/velmaverse/readme
+++ b/ros/src/velmaverse/readme
@@ -1,4 +1,9 @@
 Velmaverse - świat symulacji
 
-Zawiera ustawienia silnika ODE bez których system nie zadziała.
+Velmaverse:
 Umieszcza na scenie platformy dynamiczną i kinematyczną w punkcie (0,0).
+Umieszcza Ocznicę.
+
+Solovelma:
+Umieszcza platformę dynamiczną.
+
