Popraw pierwszy rozdział

--- a/docs/bibliography.tex
+++ b/docs/bibliography.tex
@@ -42,6 +42,13 @@ Jae-Bok Song, Kyung-Seok Byun
 ``Design and Control of a Four-Wheeled Omnidirectional Mobile Robot with Steerable Omnidirectional Wheels'',
 Journal of Robotic Systems 21(4):193-208, Kwiecień 2004
 
+% jakiśtam.pdf
+\bibitem{boringbot}
+Ioan Doroftei, Victor Grosu, Veaceslav Spinu
+``Omnidirectional Mobile Robot – Design and Implementation'',
+Bioinspiration and Robotics Walking and Climbing Robots, Maki K. Habib (Ed.), ISBN: 978-3-902613-15-8, InTech,
+2007
+
 \bibitem{gazebo_website}
 Strona internetowa symulatora Gazebo. \\
 \url{http://gazebosim.org}
