--- a/docs/components.tex
+++ b/docs/components.tex
@@ -1,4 +1,5 @@
 \chapter{Komponenty systemu}
+\label{sec:components}
 Aby uruchomić system, nie wystarczy uruchomić Gazebo z modelami, należy zadbać także o odpowiednie przekazywanie informacji pomiędzy pakietami.
 Należy także przetestować modele, czy zachowują się poprawnie w prostych scenariuszach testowych, tak samo, jak testować się będzie program sterujący.
 Do tego potrzebne są programy wspomagające, które łączy się w różne konfiguracje, w zależności od scenariusza testowego.
