popraw drugi rozdział

--- a/docs/about.tex
+++ b/docs/about.tex
@@ -491,6 +491,7 @@
 	Chociaż różne osoby odpowiadają za rozwój tych oprogramowań,
 	kolejne wersje Gazebo są powiązane z kolejnymi wersjami ROSa, nie można użyć przestarzałej wersji Gazebo z nowszym ROSem i odwrotnie.
 	Symulator można zainstalować osobno, lub jako jeden z pakietów ROSa.
+	Jednakże, ze względu na chęć zachowania wysokiej kompatybilności pakietów ROSa, to nie najnowsza wersja Gazebo jest używana w pakiecie systemu.
 
 	\subsection{V-Rep}
 	Program do pobrania z \cite{vrep_website}. Duże i skomplikowane środowisko, reklamujące się wieloma zaawansowanymi mechanizmami i funkcjami.
