--- a/docs/main.tex
+++ b/docs/main.tex
@@ -3,7 +3,6 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{polski}
-
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{wrapfig}
@@ -16,6 +15,7 @@
 \usepackage{cleveref}
 \usepackage{icomma}
 \usepackage[ampersand]{easylist}
+\usepackage{dirtree}
 
 \input{macros.tex}
 
