--- a/docs/bibliography.tex
+++ b/docs/bibliography.tex
@@ -49,6 +49,13 @@ Ioan Doroftei, Victor Grosu, Veaceslav Spinu
 Bioinspiration and Robotics Walking and Climbing Robots, Maki K. Habib (Ed.), ISBN: 978-3-902613-15-8, InTech,
 2007
 
+% sposoby_modelowania.pdf
+\bibitem{modelling_ways}
+Viktor Kálmán ``Omnidirectional Wheel Simulation --- a Practical Approach'',
+Budapest University of Technology and Economics, 
+Department of Control Engineering and Information Technology,
+2013
+
 \bibitem{gazebo_website}
 Strona internetowa symulatora Gazebo. \\
 \url{http://gazebosim.org}
